<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".forgetPasswordRecoveryOption"
    android:background="@color/colorWhite"
    android:padding="30dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:src="@drawable/back_login"
            android:tint="@color/colorBlack" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="40sp"
            android:textAllCaps="true"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorBlack"
            android:text="@string/forget_password_text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorBlack"
            android:text="@string/forget_password_option_description" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginTop="40dp"
            android:background="@color/colorLightWhite"
            android:padding="10dp">

            <Button
                android:id="@+id/mobile_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00000000" />

            <ImageView
                android:id="@+id/mobile_icon"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/ic_smartphone"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"/>
            <TextView
                android:id="@+id/mobile_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/via_sms"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_toRightOf="@id/mobile_icon"
                android:layout_marginTop="35dp"/>
            <TextView
                android:id="@+id/mobile_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/via_sms_desc"
                android:textColor="@color/colorBlack"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_toRightOf="@id/mobile_icon"
                android:layout_below="@id/mobile_title" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginTop="35dp"
            android:background="@color/colorLightWhite"
            android:padding="10dp">

            <ImageView
                android:id="@+id/email_icon"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/ic_email"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"/>
            <TextView
                android:id="@+id/email_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/via_email"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_toRightOf="@id/email_icon"
                android:layout_marginTop="35dp"/>
            <TextView
                android:id="@+id/email_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/via_email_desc"
                android:textColor="@color/colorBlack"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_toRightOf="@id/email_icon"
                android:layout_below="@id/email_title" />
            <Button
                android:id="@+id/email_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00000000" />


        </RelativeLayout>





    </LinearLayout>


</ScrollView>