<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".forgetPassword"
    android:background="@color/colorWhite"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_login"
            android:tint="@color/colorBlack"
            android:padding="5dp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/forget_password"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="40sp"
            android:textAllCaps="true"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:text="@string/forgetpassword"
            android:layout_gravity="center"
            android:gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:text="@string/forget_password_description"
            android:layout_gravity="center"
            android:gravity="center"/>

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/color_border"
            android:drawableStart="@drawable/ic_email_signup"
            android:drawablePadding="16dp"
            android:ems="10"
            android:padding="12dp"
            android:hint="@string/enteremail"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/buttonEmailNext"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:text="@string/forget_password_button"
            android:background="@color/colorWave"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textSize="22sp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"/>


    </LinearLayout>

</ScrollView>