<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFEB3B"
    tools:context=".authentication">


    <Button
        android:id="@+id/button_login"
        android:layout_width="130dp"
        android:layout_height="59dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="38dp"
        android:background="@color/colorWave"
        android:text="@string/login"
        android:onClick="setLogin"
        app:layout_constraintEnd_toStartOf="@+id/button_signup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        tools:ignore="NotSibling,UnknownId" />

    <Button
        android:id="@+id/skip_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFEB3B"
        android:drawableEnd="@drawable/skip_icon"
        android:drawableRight="@drawable/skip_icon"
        android:padding="10dp"
        android:onClick="skipmethod"
        android:text="@string/skip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_signup"
        android:layout_width="130dp"
        android:layout_height="57dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="38dp"
        android:background="@color/colorWave"
        android:text="@string/signup"
        android:onClick="setSignup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_login"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        tools:ignore="NotSibling,UnknownId" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="230dp"
        android:layout_height="190dp"
        android:layout_marginStart="90dp"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="97dp"
        android:layout_marginEnd="90dp"
        android:layout_marginRight="90dp"
        android:background="#FFEB3B"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/circle_cropped" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="206dp"
        android:layout_height="54dp"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginEnd="120dp"
        android:layout_marginRight="120dp"
        android:layout_marginBottom="122dp"
        android:fallbackLineSpacing="true"
        android:foregroundGravity="center"
        android:gravity="center"
        android:lineSpacingExtra="8sp"
        android:onClick="setDoitLater"
        android:padding="10dp"
        android:text="@string/do_it_later"
        android:textSize="20sp"
        android:textStyle="bold"
        app:fontFamily="sans-serif-condensed-light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_login" />

    <Button
        android:id="@+id/buttonLanguage"
        android:layout_width="48dp"
        android:layout_height="52dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/colorBlack"
        android:background="@drawable/ic_g_translate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>