<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".verification"
    android:background="@color/colorWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close_black_cross"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/otp_text"
            android:textAllCaps="true"
            android:padding="5dp"
            android:textStyle="bold"
            android:includeFontPadding="false"
            android:textColor="@color/colorBlack"
            android:textSize="100sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/otp_text_verification"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:includeFontPadding="false"
            android:padding="5dp"
            android:textColor="@color/colorBlack"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:includeFontPadding="false"
            android:textAlignment="center"
            android:layout_marginTop="50dp"
            android:text="@string/otp_text_description"
            android:textAllCaps="true"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.chaos.view.PinView
            android:id="@+id/pin_view"
            style="@style/PinWidget.PinView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:cursorVisible="true"
            android:gravity="center"
            android:inputType="number"
            android:itemBackground="@color/colorWhite"
            app:cursorColor="@color/colorBlack"
            app:hideLineWhenFilled="true"
            app:itemCount="6"
            app:itemHeight="45dp"
            app:itemRadius="5dp"
            app:itemWidth="40dp"
            app:lineColor="@color/colorAccent" />

        <Button
            android:id="@+id/button_verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorSignUp"
            android:text="@string/otp_text_button"
            android:layout_marginTop="80dp"
            android:textStyle="bold"
            android:onClick="setButtonVerify"
            android:textSize="24sp"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite"/>

    </LinearLayout>

</ScrollView>
