<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".changePassword"
    android:background="@color/colorWhite"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_back_change_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_login"
            android:tint="@color/colorBlack"
            android:padding="5dp"/>
        <ImageView
            android:id="@+id/image_lock_open"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="25dp"
            android:src="@drawable/ic_lock_open"
            android:layout_gravity="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="40sp"
            android:textAllCaps="true"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:text="@string/change_password"
            android:layout_gravity="center"
            android:gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textAllCaps="true"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:text="@string/change_password_desc"
            android:layout_gravity="center"
            android:gravity="center"/>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

           <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
               android:id="@+id/new_password"
               android:layout_width="match_parent"
               android:layout_height="54dp"
               android:background="@drawable/color_border"
               android:drawableStart="@drawable/ic_lock_signup"
               android:drawablePadding="10dp"
               android:layout_marginTop="20dp"
               android:hint="@string/new_password"
               android:textColorHint="@color/colorBlack"
               android:padding="5dp"
               app:drawable_hide="@drawable/ic_visibility"
               app:drawable_show="@drawable/ic_visibility_off"
               app:tint_color="@color/colorBlack"
               android:drawableLeft="@drawable/ic_lock_signup" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:background="@drawable/color_border"
                android:drawableStart="@drawable/ic_lock_signup"
                android:drawablePadding="10dp"
                android:layout_marginTop="20dp"
                android:hint="@string/confirm_password"
                android:textColorHint="@color/colorBlack"
                android:padding="5dp"
                app:drawable_hide="@drawable/ic_visibility"
                app:drawable_show="@drawable/ic_visibility_off"
                app:tint_color="@color/colorBlack"
                android:drawableLeft="@drawable/ic_lock_signup" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/ok"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorWhite"
            android:background="@color/colorBlack"
            android:textStyle="bold"
            android:textSize="22sp"
            android:textAlignment="center"
            android:onClick="setOk"
            android:textAllCaps="true"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/ok" />


    </LinearLayout>


</ScrollView>

